--- a/pages/career.css
+++ b/pages/career.css
@@ -1,3 +1,8 @@
+/* color theme! */
+/*  #00EB00 - rgb(0, 212, 0) */
+/*  #IF0322 - rgb(31, 3, 34) */
+/*  #87B38D - rgb(135, 179, 141) */
+
 .flex-container {
 
 }
@@ -24,6 +29,18 @@ h2 {
     flex-wrap: wrap;
     width: 100%;
     justify-content: space-around;
+    background: 
+        linear-gradient(
+            to bottom,
+            rgb(31, 3, 34),
+            rgb(31, 3, 34),
+            rgba(0, 0, 0, 0.6));
+    color: rgb(0, 212, 0);
+    text-shadow:
+		-.3px -.3px 0 black,
+		.3px -.3px 0 black,
+		-.3px .3px 0 black,
+		.3px .3px 0 black;
 }
 
 .album-flex div {
@@ -35,6 +52,8 @@ h2 {
 .album-flex img {
     width: 200px;
     height: 200px;
+    box-shadow: rgba(135, 179, 141, 0.5) 3px 3px 5px;
+    border-radius: 5px;
 }
 
 .album-card {
@@ -53,7 +72,9 @@ h2 {
     font-size: 1em;
 }
 
-.album-card h5 {}
+.album-card h5 {
+    font-size: .8em;
+}
 
 .mansion-flex {
 
