--- a/pages/personal.css
+++ b/pages/personal.css
@@ -1,9 +1,66 @@
-.spouce-container{
-
-    
+.kanye-container {
+    display: -webkit-flex;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.kid-container{
+.kanye-container img {
+    height: 20em;
+}
 
+.spouse1 {
+    display: -webkit-flex;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+}
+
+.spouse1 img {
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+}
+
+.spouse2 {
+    display: -webkit-flex;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+}
+
+.spouce2 img {
+    justify-content: center;
+    align-items: center;
+}
+
+.kid3 {
+    display: -webkit-flex;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.kid3 img {
+    justify-content: center;
+    align-items: center;
 
 }
+
+.kid4 {
+    display: -webkit-flex;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.kid4 img {
+    justify-content: center;
+    align-items: center;
+}
+
+
+
+
