--- a/styles.css
+++ b/styles.css
@@ -52,7 +52,7 @@ body {
 }
 
 .topnav a:hover {
-   background-color: rgba(135, 179, 141);
+   background-color: white;
    color: black;
    text-decoration: none;
 }
