--- a/pages/career.css
+++ b/pages/career.css
@@ -7,9 +7,25 @@
 
 }
 
-.intro-div {
-    padding: 1em;
+.similar-content {
+    background:
+        linear-gradient(
+            rgba(0, 0, 0, 0.7),
+            rgba(31, 3, 34, 0.7) 
+        ),
+        url("../images/kanyebackgroundimg2.jpg") no-repeat fixed;
+    background-size: cover;
+    color: rgb(0, 212, 0);
 }
+
+.intro-div {
+    display: flex;
+    flex-direction: column;
+}
+
+.intro-div h2 {
+    width: 100%;
+} 
 
 .intro-div h3 {
     font-size: 1em;
@@ -24,9 +40,11 @@
     background: 
         linear-gradient(
             to bottom,
-            rgb(31, 3, 34),
-            rgb(31, 3, 34),
-            rgba(0, 0, 0, 0.6));
+            rgba(31, 3, 34, 0.8),
+            rgba(31, 3, 34, 0.8),
+            rgba(0, 0, 0, 0.8)),
+            url("../images/kanyebackgroundimg5.jpg") no-repeat fixed;
+    background-size: cover;
     color: rgb(0, 212, 0);
     text-shadow:
 		-.3px -.3px 0 black,
@@ -37,6 +55,11 @@
 
 h2 {
     text-align: center;
+    margin: 1em auto;
+    padding: 1em;
+    background: linear-gradient(
+        rgba(0, 0, 0, 0.9), 
+        rgba(0, 0, 0, 0.05));
 }
 
 .album-flex {
@@ -85,9 +108,11 @@ h2 {
 .home-container {
     background: 
         linear-gradient(
-            rgb(31, 3, 34),
-            black
-        );
+            to top,
+            rgba(31, 3, 34, 0.8),
+            rgba(0, 0, 0, 0.8)),
+        url("../images/kanyebackgroundimg4.jpg") no-repeat fixed;
+    background-size: cover;
     color: rgb(0, 219, 0);
 }
 
@@ -110,6 +135,7 @@ h2 {
     background:
         linear-gradient(
             to top,
+            rgb(31, 3, 34),
             black,
             black,
             silver
@@ -129,6 +155,45 @@ h2 {
 
 }
 
-.awards-flex {
+.awards-container {
+    background:
+        linear-gradient(
+            rgba(0, 0, 0, 0.8),
+            rgba(31, 3, 34, 0.8)
+        ),
+        url("../images/kanyebackgroundimg3.jpg") no-repeat fixed;
+    background-size: cover;
+    color: rgb(0, 212, 0);
+    text-shadow: 
+        -1px 0 rgb(31, 3, 34), 
+        0 1px rgb(31, 3, 34), 
+        1px 0 rgb(31, 3, 34), 
+        0 -1px rgb(31, 3, 34);
+}
 
+.awards-flex {
+    display: flex;
+    text-align: center;
+    justify-content: space-around;
+    margin: 2em;
+    
+}
+
+.awards-flex img {
+    box-shadow: 0 15px 10px -10px rgba(0, 212, 0, 0.5);
+    border-radius: 5px;
+    
+}
+
+.awards-flex div {
+    margin: auto;
+}
+
+.awards-flex ul {
+    list-style-type: none;
+    padding: 0;
+}
+
+.awards-flex ul li {
+    
 }
