--- a/styles.css
+++ b/styles.css
@@ -87,7 +87,7 @@ body {
         linear-gradient(
             rgb(31, 3, 34), 
             rgb(31, 3, 34));
-    color: rgb(135, 179, 141);
+    color: white;
     display: flex;
     flex-direction: column;
     justify-content: center;
