--- a/executive.css
+++ b/executive.css
@@ -54,7 +54,7 @@ h2 {
     font-size: 300%;
     text-align: center
 }
-p {
+.country1 p {
     color:black;
     font-family: 'Times New Roman', Times, serif;
     font-size: 200%;
